--- a/src/Benchmarking/Benchmarking.csproj
+++ b/src/Benchmarking/Benchmarking.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="AutoFixture" Version="4.17.0" />
     <PackageReference Include="Bogus" Version="34.0.2" />
     <PackageReference Include="Jil" Version="2.17.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Utf8Json" Version="1.3.7" />
   </ItemGroup>
