--- a/src/Benchmarking/Benchmarking.csproj
+++ b/src/Benchmarking/Benchmarking.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Jil" Version="2.17.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+    <PackageReference Include="NetEscapades.EnumGenerators" Version="1.0.0-beta04" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Utf8Json" Version="1.3.7" />
   </ItemGroup>
